# leprechaun

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: collector.rs  data_manager.rs  main.rs  models.rs
src/apis/: mod.rs  vantage_alpha.rs  xtb_api.rs
