[package]
name = "leprechaun"
version = "0.1.0"
edition = "2021"
authors = ["Maksymilian Neumann"]

[dependencies] 
dialoguer = "0.11.0"
dotenvy = "0.15.7"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
