[package]
name = "leprechaun"
version = "0.1.0"
edition = "2021"
authors = ["Maksymilian Neumann"]

[dependencies] 
dialoguer = "0.11.0"
dotenvy = "0.15.7"
reqwest = { version = "0.12.3", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.38"
csv = "1.3.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "postgres", "chrono"] }
